loopdowhile.Poucet1.scala.code
var white = true

while (white){
  var baggles = 0 ; 
  for (stepper <- 1 to 5) 
  	{if (isOverBaggle()) 
     {baggles = baggles + 1}; 
     forward()}
	if (baggles < 3)
  	{right()}
  else {left()}
	if (! isGroundWhite())
		{white = false}}
forward()